changend docker-compose.yml